Added dictionary to drive new word change solver section

--- a/DemoMvcApplication/DemoMvcApplication.Tests/DemoMvcApplication.Tests.csproj
+++ b/DemoMvcApplication/DemoMvcApplication.Tests/DemoMvcApplication.Tests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
+    <Compile Include="WordChangeSolver\Models\EnglishDictionaryTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
@@ -70,6 +71,7 @@
       <Name>DemoMvcApplication</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
