--- a/DemoMvcApplication/WordChangeSolverMvc.Tests/WordChangeSolverMvc.Tests.csproj
+++ b/DemoMvcApplication/WordChangeSolverMvc.Tests/WordChangeSolverMvc.Tests.csproj
@@ -6,11 +6,11 @@
     <ProductVersion>
     </ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{E41A982F-69AD-49F7-B2AD-C58FEBADCB02}</ProjectGuid>
+    <ProjectGuid>{EE1124D3-FC42-417E-9F34-44A2B2FF9E30}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DemoMvcApplication.Tests</RootNamespace>
-    <AssemblyName>DemoMvcApplication.Tests</AssemblyName>
+    <RootNamespace>WordChangeSolverMvc.Tests</RootNamespace>
+    <AssemblyName>WordChangeSolverMvc.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -49,14 +49,12 @@
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Web.Abstractions" />
-    <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\DemoMvcApplication\_bin_deployableAssemblies\System.Web.Mvc.dll</HintPath>
-    </Reference>
+    <Reference Include="System.Web.Mvc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\EnglishDictionaryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
@@ -65,12 +63,11 @@
     <Content Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DemoMvcApplication\DemoMvcApplication.csproj">
-      <Project>{CDE215E1-62EB-45CE-A2B4-881C1DF01541}</Project>
-      <Name>DemoMvcApplication</Name>
+    <ProjectReference Include="..\WordChangeSolverMvc\WordChangeSolverMvc.csproj">
+      <Project>{65DC3814-A02A-40F7-ACFC-7E5AC467E503}</Project>
+      <Name>WordChangeSolverMvc</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
