--- a/DemoMvcApplication/WordChangeSolverMvc.Tests/WordChangeSolverMvc.Tests.csproj
+++ b/DemoMvcApplication/WordChangeSolverMvc.Tests/WordChangeSolverMvc.Tests.csproj
@@ -54,7 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\EnglishDictionaryTest.cs" />
+    <Compile Include="Controllers\WordChangeControllerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
