--- a/DemoMvcApplication/DemoMvcApplication.Tests/DemoMvcApplication.Tests.csproj
+++ b/DemoMvcApplication/DemoMvcApplication.Tests/DemoMvcApplication.Tests.csproj
@@ -57,6 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\StatePedCycleCrashesControllerTest.cs" />
+    <Compile Include="Fakes\FakeCrashRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
