Modified dictionary testing to use dependency injection Gutted WordChangeControllerTest to set up for TDD

--- a/DemoMvcApplication/WordChangeSolverMvc.Tests/WordChangeSolverMvc.Tests.csproj
+++ b/DemoMvcApplication/WordChangeSolverMvc.Tests/WordChangeSolverMvc.Tests.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\WordChangeControllerTest.cs" />
+    <Compile Include="Models\EnglishDictionaryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
