--- a/DemoMvcApplication/WordChangeSolverMvc.Tests/WordChangeSolverMvc.Tests.csproj
+++ b/DemoMvcApplication/WordChangeSolverMvc.Tests/WordChangeSolverMvc.Tests.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Controllers\WordChangeControllerTest.cs" />
     <Compile Include="Models\EnglishDictionaryTest.cs" />
+    <Compile Include="Models\PuzzleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
