--- a/DemoMvcApplication/DemoMvcApplication.Tests/DemoMvcApplication.Tests.csproj
+++ b/DemoMvcApplication/DemoMvcApplication.Tests/DemoMvcApplication.Tests.csproj
@@ -58,7 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\StatePedCycleCrashesControllerTest.cs" />
+    <Compile Include="Controllers\WordChangeControllerTest.cs" />
     <Compile Include="Fakes\FakeCrashRepository.cs" />
+    <Compile Include="Models\EnglishDictionaryTest.cs" />
+    <Compile Include="Models\PuzzleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\HomeControllerTest.cs" />
     <Compile Include="Controllers\AccountControllerTest.cs" />
