Cleaned up deployment (removed debug files, set SQL server connection)

--- a/DemoMvcApplication/DemoMvcApplication/DemoMvcApplication.csproj
+++ b/DemoMvcApplication/DemoMvcApplication/DemoMvcApplication.csproj
@@ -33,6 +33,11 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PublishDatabaseSettings>
+      <Objects>
+      </Objects>
+    </PublishDatabaseSettings>
+    <ExcludeGeneratedDebugSymbol>true</ExcludeGeneratedDebugSymbol>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
