--- a/DemoMvcApplication/DemoMvcApplication/Web.Release.config
+++ b/DemoMvcApplication/DemoMvcApplication/Web.Release.config
@@ -3,17 +3,11 @@
 <!-- For more information on using web.config transformation visit http://go.microsoft.com/fwlink/?LinkId=125889 -->
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--
-    In the example below, the "SetAttributes" transform will change the value of 
-    "connectionString" to use "ReleaseSQLServer" only when the "Match" locator 
-    finds an atrribute "name" that has a value of "MyDB".
-    
     <connectionStrings>
-      <add name="MyDB" 
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True" 
+      <add name="DemoMvcDataConnectionString" 
+        connectionString="Data Source=WIN-6F18E1BVRDL; Initial Catalog=DemoMvcData;Integrated Security=True;User ID=WIN-6F18E1BVRDL\Administrator" 
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
-  -->
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
